--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="row m-0 p-0" id="parent">
            <div class="col-1 bg-light p-0" style="box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;">
             <div class="bg-light d-flex justify-content-center align-items-center"  style="height:70px; font-size:small;">
-                <img src="./img1.png" alt="Italian Trulli">
+                <img src="img1.png" alt="Italian Trulli">
             </div>
             <div class="bg-light pb-2 d-flex-column justify-content-center align-items-center mt-4" style="font-size:small; color: rgb(129,153,177); ">
               <center>
